--- a/views/nav.pug
+++ b/views/nav.pug
@@ -4,11 +4,11 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
     a#log.navbar-brand(href='#')
       img.img-fluid(src='images/wny-logo.jpg' alt='logo')
     if page == 'developpeur'
-      a(class=aClass).navbar-recruteur(href='/recruteur')
+      //a(class=aClass).navbar-recruteur(href='/recruteur')
         span(data-hover='RECRUTEUR') RECRUTEUR
     else
-      a(class=aClass).navbar-recruteur(href='/')
-        span(data-hover='DEVELOPPEUR') DEVELOPPEUR
+    //  a(class=aClass).navbar-recruteur(href='/')
+      //  span(data-hover='DEVELOPPEUR') DEVELOPPEUR
     // BURGER RESPONSIVE
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarTogglerDemo02' aria-controls='navbarTogglerDemo02' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
