--- a/views/serious-bar.pug
+++ b/views/serious-bar.pug
@@ -2,9 +2,9 @@ section#serious-bar.bg-blue.pt-l.pb-l
   .container
     #counter
       .row.text-center.text-white
-        for bar in barList
+        - for (var i = 0; i < bar.length; i++)
           .col-4
-            i.fas.fa-4x(class=bar.picto)
-            .counter-value(data-count=bar.numbers) 0
-            h2= bar.name
+            i.fas.fa-4x(class=bar[i].picto)
+            .counter-value(data-count=bar[i].numbers) 0
+            h2=bar[i].name
   // /.container
