--- a/views/formulaire.pug
+++ b/views/formulaire.pug
@@ -6,24 +6,24 @@
       .row.formOffre
         .col-6.col-sm-4
           label.form_col(for='emploi') Poste :
-          input#emploi(name='emploi', type='text')
+          input#emploi(name='emploi', type='text', placeholder='Saisissez votre emploi de rêve')
           span.tooltip Un poste ne peut pas faire moins de 2 caract&egrave;res
         .col-6.col-sm-4
           label.form_col(for='duree') Dur&eacute;e :
-          input#duree(name='duree', type='text')
+          input#duree(name='duree', type='text', placeholder='La durée de votre offre')
           span.tooltip La dur&eacute;e doit &ecirc;tre sup&eacute;rieure &agrave; 0
         .col-12.col-sm-4
           label.form_col(for='lieu') Lieu :
-          input#duree(name='lieu', type='text')
+          input#duree(name='lieu', type='text', placeholder='L\'endroit idéal')
           span.tooltip Le lieu ne peut pas etre vide
       .row.formOffre
         .col-6.col-sm-4
           label.form_col(for='diplome') Dipl&ocirc;me :
-          input#diplome(name='diplome', type='text')
-          span.tooltip Le champ diplome ne peut pas &ecirc;tre vide
+          input#diplome(name='diplome', type='text', placeholder='Le diplôme minimum souhaité')
+          span.tooltip Le champ dipl&ocirc;me ne peut pas &ecirc;tre vide
         .col-6.col-sm-4
           label.form_col(for='experience') Exp&eacute;rience :
-          input#experience(name='experience', type='textarea')
+          input#experience(name='experience', type='textarea', placeholder='L\'expérience qui fait la différence')
           span.tooltip Le champ exp&eacute;rience ne peut pas &ecirc;tre vide
       .row.formOffre
         .col-12.col-sm-6
