--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -494,6 +494,9 @@ color:#0a7893;
  color:rgba(10, 120,147, 1);
 }
 
+#log {
+  margin-left: -5em;
+}
 /*------------------------
         FUN BAR
 -------------------------*/
