--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -10,39 +10,34 @@ body{
 .divs:first-child{
   display: block;
 }
-.no-edit td{
-  min-width: 213px;
+.d-table .head .d-table-cell{
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+  font-weight: bold;
 }
-.edit{
-  display: none;
-}
-
-#wrapper {
-  padding-left: 250px;
-  /* -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease; */
+.d-table .d-table-cell{
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
 }
 
 #sidebar-wrapper {
   z-index: 1000;
   position: fixed;
   left: 0;
+  top:0;
   width: 250px;
   height: 100%;
   overflow-y: auto;
   background: #ffffff;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
 }
 
 #page-content-wrapper {
-  position:relative;
+  width: calc(100% - 250px);
   padding: 20px;
-  left: 300px;
+  position: absolute;
+  top :0;
+  right:0;
 }
 
 /* Sidebar Styles */
@@ -89,7 +84,7 @@ body{
   text-decoration: none;
   background: #f1f6ff;
 }
-.sidebar-nav li a.active{
+.sidebar-nav li.active a{
   color: #1991EB;
 }
 
