--- a/views/admin.pug
+++ b/views/admin.pug
@@ -19,20 +19,45 @@ block content
       #page-content-wrapper
         .container-fluid
           #contentBar.divs
-            table.table
-              thead
-                tr
-                  th Nom
-                  th Icône
-                  th Nombres
-                  th
+            .d-table.w-100
+              .d-table-row.head
+                .d-table-cell Nom
+                .d-table-cell Icône
+                .d-table-cell Nombres
+                .d-table-cell
               - for (var i = 0; i < bar.length; i++)
-                tr
-                  td= bar[i].name
-                  td= bar[i].picto
-                  td= bar[i].numbers
-                  td
-                    a(href='#', class='modifier btn btn-primary') Modifier
+                - let baModal = 'Bar' + i
+                  .d-table-row
+                    .d-table-cell= bar[i].name
+                    .d-table-cell= bar[i].picto
+                    .d-table-cell= bar[i].numbers
+                    .d-table-cell
+                      a(href='#', class='modifier btn btn-primary', data-target= '#Bar' + i, data-toggle='modal') Modifier
+                    div(id=baModal).modal
+                      .modal-dialog
+                          .modal-content
+                            .modal-header
+                              h2.modal-title EDITION
+                              |
+                              button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') &times;
+                            |
+                            .modal-body
+                              form(method='POST', enctype='multipart/form-data', action='/admin/updateData')
+                                .form-group
+                                  label Name
+                                  |
+                                  input.form-control(type='text', name='name', placeholder=bar[i].name)
+                                |
+                                .form-group
+                                  label Chiffres
+                                  |
+                                  input.form-control(type='text', name='numbers', placeholder=bar[i].numbers)
+                                |
+                                button.btn.btn-primary(type='submit') Submit
+                            |
+                            .modal-footer
+                              button.btn.btn-secondary(type='button', data-dismiss='modal') Close
           #contentOffres.divs
             table.table
               thead
@@ -45,15 +70,48 @@ block content
                   th Expérience
                   th
               - for (var i = 0; i < missions.length; i++)
-                tr.no-edit
-                  td= missions[i].nom_poste
-                  td= missions[i].recruteur
-                  td= missions[i].duree
-                  td= missions[i].localisation
-                  td= missions[i].diplome
-                  td= missions[i].experience
-                  td
-                    a(href='#', class='modifier btn btn-primary', data-showedit=missions[i].id) Modifier
+                - let miModal = 'Missions' + i
+                  tr.no-edit
+                    td= missions[i].nom_poste
+                    td= missions[i].recruteur
+                    td= missions[i].duree
+                    td= missions[i].localisation
+                    td= missions[i].diplome
+                    td= missions[i].experience
+                    td
+                      a(href='#', class='modifier btn btn-primary', data-target= '#Missions' + i, data-toggle='modal') Modifier
+                  div(id=miModal).modal.fade
+                      .modal-dialog.modal-lg
+                        .modal-content
+                          // Modal Header
+                          .modal-header
+                            h2.modal-title EDITION
+                            button.close(type='button' data-dismiss='modal') &times;
+                          // Modal body
+                          .modal-body
+                            form(method='POST', enctype='multipart/form-data', action='updateData')
+                              .form-group
+                                label Nom du poste
+                                input.form-control(type='text', placeholder=missions[i].nom_poste, name='nom_poste')
+                              .form-group
+                                label Recruteur
+                                input.form-control(type='text', placeholder=missions[i].recruteur, name='recruteur')
+                              .form-group
+                                label Durée
+                                input.form-control(type='text', placeholder=missions[i].duree, name='duree')
+                              .form-group
+                                label Localisation
+                                input.form-control(type='text', placeholder=missions[i].localisation, name='localisation')
+                              .form-group
+                                label Diplôme
+                                input.form-control(type='text', placeholder=missions[i].diplome, name='diplome')
+                              .form-group
+                                label Expérience
+                                input.form-control(type='text', placeholder=missions[i].experience, name='experience')
+                              button.btn.btn-primary(type='submit') Submit
+                          // Modal footer
+                          .modal-footer
+                            button.btn.btn-secondary(type='button' data-dismiss='modal') Fermer
           #contentCollab.divs
             table.table
               thead
@@ -65,11 +123,41 @@ block content
                   th Image
                   th
               - for (var i = 0; i < collab.length; i++)
-                tr
-                  td= collab[i].name
-                  td= collab[i].age
-                  td= collab[i].techno
-                  td= collab[i].experience
-                  td= collab[i].image
-                  td
-                    a(href='#', class='modifier btn btn-primary') Modifier
+                - let coModal = 'Collab' + i
+                  tr
+                    td= collab[i].name
+                    td= collab[i].age
+                    td= collab[i].techno
+                    td= collab[i].experience
+                    td= collab[i].image
+                    td
+                      a(href='#', class='modifier btn btn-primary', data-target= '#Collab' + i, data-toggle='modal') Modifier
+                  div(id=coModal).modal.fade
+                      .modal-dialog.modal-lg
+                        .modal-content
+                          // Modal Header
+                          .modal-header
+                            h2.modal-title EDITION
+                            button.close(type='button' data-dismiss='modal') &times;
+                          // Modal body
+                          .modal-body
+                            form(method='POST', enctype='multipart/form-data', action='updateData')
+                              .form-group
+                                label Name
+                                input.form-control(type='text', placeholder=collab[i].name, name='name')
+                              .form-group
+                                label Age
+                                input.form-control(type='text', placeholder=collab[i].age, name='age')
+                              .form-group
+                                label Technologies
+                                input.form-control(type='text', placeholder=collab[i].techno, name='techno')
+                              .form-group
+                                label Expérience
+                                input.form-control(type='text', placeholder=collab[i].experience, name='experience')
+                              .form-group
+                                label Image
+                                input.d-block(type='file', placeholder=collab[i].image, name='image')
+                              button.btn.btn-primary(type='submit') Submit
+                          // Modal footer
+                          .modal-footer
+                            button.btn.btn-secondary(type='button' data-dismiss='modal') Fermer
