Ajout page concept

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -572,6 +572,13 @@ body.admin {
   border-top-right-radius: 0;
 }
 
+/* --------------------
+     CONCEPT
+------------------------ */
+
+.margin-tibo {
+  margin-top: 4.5em;
+}
 
 /* --------------------
      BLOG
