--- a/views/concept2.pug
+++ b/views/concept2.pug
@@ -1,4 +1,4 @@
-.container.mt-4
+.container.margin-tibo
   section.concept.text-center
         h2 Concept
         .presentation.text-justify
@@ -9,37 +9,37 @@
               | Nous sommes des trentenaires qui ont connu cette folie est on va change rotut ca pour vous offrir toutes les informations dont vous avez besoin pour découvrir blablalblalblachez celles qui vous intéressent le plus. Chaque semaine, nous nous donnons à fond pour vous nos clients qui payent bien.
         // End prensetation
   section.Team.concept.text-justify
-       h2.text-center.mt-2 Team
-        .row
-          .col-12.col-md-4
-            h4.text-center Ce qu'ils disent sur l'équipe
-              .text-justify
-                  p
-                    | A Wild Not You, on ne s’ennuie quasiment jamais. Il y a toujours un quête à déchiffrer ou des amis à aider.
-                    | Et sinon, le vendredi c'est apéro, d'habitude c'est Coralie et Julien qui invitent.
-            h4.text-center Good to know
-              .text-justify
-                p
-                  | Tu pourras jouer à Mario Kart toute la journée si tu n'es pas motivé pour travailler. Ateliers d’équipes, journées d’inspiration, batailles de polochons, sont de rigueur... Les occasions de questionner et d'enrichir notre manière de travailler ne manquent pas !
-                  | Et sinon, bravo à ceux qui lisent ce texte.
-          .col-12.col-md-8
-            .row
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
-            .row
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
-            .row
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
-            .row
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
-              .col-12.col-md-6
-                img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+      h2.text-center.mt-2 Team
+      .row
+        .col-12.col-md-4
+          h4.text-center Ce qu'ils disent sur l'équipe
+          .text-justify
+          p
+            | A Wild Not You, on ne s’ennuie quasiment jamais. Il y a toujours un quête à déchiffrer ou des amis à aider.
+            | Et sinon, le vendredi c'est apéro, d'habitude c'est Coralie et Julien qui invitent.
+          h4.text-center Good to know
+          .text-justify
+          p
+            | Tu pourras jouer à Mario Kart toute la journée si tu n'es pas motivé pour travailler. Ateliers d’équipes, journées d’inspiration, batailles de polochons, sont de rigueur... Les occasions de questionner et d'enrichir notre manière de travailler ne manquent pas !
+            | Et sinon, bravo à ceux qui lisent ce texte.
+        .col-12.col-md-8
+          .row
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+          .row
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+          .row
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+          .row
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
+            .col-12.col-md-6
+              img.img-fluid.m-1(src='http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg', alt='image du personnel de la team')
