--- a/views/footer_collab.pug
+++ b/views/footer_collab.pug
@@ -21,12 +21,12 @@ section#myFooter
         // 2eme colonne
         h3 Contact
           ul
-            //- li= contactList.adresse
-            //- li= contactList.mail
-            //- li= contactList.tel
+            li 68 cours de Verdun
+            li alex.lorion@wildcodeschool.com
+            li 06.69.50.26.89
         h3 Horaires
           ul
-            //- li= contactList.horraires
+            li 09h00-18h00
             li Week-end : Ferm&eacute;
       .col-12.col-sm-6.col-lg-3.infos
         // 3eme colonne
