--- a/views/nav.pug
+++ b/views/nav.pug
@@ -16,7 +16,7 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
     #navbarTogglerDemo02.collapse.navbar-collapse
       ul.nav.navbar-nav.ml-auto
         li.nav-item
-          a.nav-link(href='#') Notre concept
+          a.nav-link(href='/concept') Notre concept
         li.nav-item
           a.nav-link(href='/emploi') Nos missions
         li#border.nav-item
