--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -400,7 +400,7 @@ color:#0a7893;
     vertical-align: top;
 }
 
-#formEmploi button, input {
+#formEmploi button, #formEmploi input {
     border: 0.09em dashed black;
     overflow: hidden;
     border-right: none;
@@ -528,8 +528,6 @@ body.admin {
   align-items: center;
   -webkit-box-pack: center;
   justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
   background-color: #f5f5f5;
 }
 
