--- a/views/admin.pug
+++ b/views/admin.pug
@@ -2,32 +2,160 @@ extends layout
 
 block content
   body
-    section#admin
-          .container
-            .row
-              .col-2
-                .row
-                  a#modifBar(href='#') Bar
-                .row
-                  a#modifOffres(href='#') Offres Emplois
-              .col-10
-                .row
-                  #contentBar
-                    table.table
-                      - for (var i = 0; i < bar.length; i++)
-                        tr
-                          td= bar[i].name
-                          td= bar[i].picto
-                          td= bar[i].numbers
-                          td
-                            a.modifier Modifier
-                .row
-                  #contentOffres
-                    table.table
-                      - for (var i = 0; i < missions.length; i++)
-                        tr
-                          td= missions[i].nom_poste
-                          td= missions[i].recruteur
-                          td= missions[i].duree
-                          td
-                            a.modifier Modifier
+    section(id='admin wrapper')
+      #sidebar-wrapper
+        ul.sidebar-nav
+          li.nav-profile
+            .profile-image
+              img(src='/images/dev07.jpg')
+            .profile-name
+              p.name M. Jones
+          li
+            a.links#modifBar(href='#', data-showdiv='contentBar') Bar
+          li
+            a.links#modifOffres(href='#', data-showdiv='contentOffres') Offres Emplois
+          li
+            a.links#modifCollab(href='#', data-showdiv='contentCollab') Collaborateurs
+      #page-content-wrapper
+        .container-fluid
+          #contentBar.divs
+            .d-table.w-100
+              .d-table-row.head
+                .d-table-cell Nom
+                .d-table-cell Icône
+                .d-table-cell Nombres
+                .d-table-cell
+              - for (var i = 0; i < bar.length; i++)
+                - let baModal = 'Bar' + i
+                  .d-table-row
+                    .d-table-cell= bar[i].name
+                    .d-table-cell= bar[i].picto
+                    .d-table-cell= bar[i].numbers
+                    .d-table-cell
+                      a(href='#', class='modifier btn btn-primary', data-target= '#Bar' + i, data-toggle='modal') Modifier
+                    div(id=baModal).modal
+                      .modal-dialog
+                          .modal-content
+                            .modal-header
+                              h2.modal-title EDITION
+                              |
+                              button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') &times;
+                            |
+                            .modal-body
+                              form(method='POST', enctype='multipart/form-data', action='/admin/updateData')
+                                .form-group
+                                  label Name
+                                  |
+                                  input.form-control(type='text', name='name', placeholder=bar[i].name)
+                                |
+                                .form-group
+                                  label Chiffres
+                                  |
+                                  input.form-control(type='text', name='numbers', placeholder=bar[i].numbers)
+                                |
+                                button.btn.btn-primary(type='submit') Submit
+                            |
+                            .modal-footer
+                              button.btn.btn-secondary(type='button', data-dismiss='modal') Close
+          #contentOffres.divs
+            .d-table.w-100
+              .d-table-row.head
+                .d-table-cell Nom du poste
+                .d-table-cell Recruteur
+                .d-table-cell Durée
+                .d-table-cell Localisation
+                .d-table-cell Diplôme
+                .d-table-cell Expérience
+                .d-table-cell
+              - for (var i = 0; i < missions.length; i++)
+                - let miModal = 'Missions' + i
+                  .d-table-row
+                    .d-table-cell= missions[i].nom_poste
+                    .d-table-cell= missions[i].recruteur
+                    .d-table-cell= missions[i].duree
+                    .d-table-cell= missions[i].localisation
+                    .d-table-cell= missions[i].diplome
+                    .d-table-cell= missions[i].experience
+                    .d-table-cell
+                      a(href='#', class='modifier btn btn-primary', data-target= '#Missions' + i, data-toggle='modal') Modifier
+                  div(id=miModal).modal.fade
+                      .modal-dialog.modal-lg
+                        .modal-content
+                          // Modal Header
+                          .modal-header
+                            h2.modal-title EDITION
+                            button.close(type='button' data-dismiss='modal') &times;
+                          // Modal body
+                          .modal-body
+                            form(method='POST', enctype='multipart/form-data', action='updateData')
+                              .form-group
+                                label Nom du poste
+                                input.form-control(type='text', placeholder=missions[i].nom_poste, name='nom_poste')
+                              .form-group
+                                label Recruteur
+                                input.form-control(type='text', placeholder=missions[i].recruteur, name='recruteur')
+                              .form-group
+                                label Durée
+                                input.form-control(type='text', placeholder=missions[i].duree, name='duree')
+                              .form-group
+                                label Localisation
+                                input.form-control(type='text', placeholder=missions[i].localisation, name='localisation')
+                              .form-group
+                                label Diplôme
+                                input.form-control(type='text', placeholder=missions[i].diplome, name='diplome')
+                              .form-group
+                                label Expérience
+                                input.form-control(type='text', placeholder=missions[i].experience, name='experience')
+                              button.btn.btn-primary(type='submit') Submit
+                          // Modal footer
+                          .modal-footer
+                            button.btn.btn-secondary(type='button' data-dismiss='modal') Fermer
+          #contentCollab.divs
+            .d-table.w-100
+              .d-table-row.head
+                .d-table-cell Nom
+                .d-table-cell Age
+                .d-table-cell Technologies
+                .d-table-cell Expérience
+                .d-table-cell Image
+                .d-table-cell
+              - for (var i = 0; i < collab.length; i++)
+                - let coModal = 'Collab' + i
+                  .d-table-row
+                    .d-table-cell= collab[i].name
+                    .d-table-cell= collab[i].age
+                    .d-table-cell= collab[i].techno
+                    .d-table-cell= collab[i].experience
+                    .d-table-cell= collab[i].image
+                    .d-table-cell
+                      a(href='#', class='modifier btn btn-primary', data-target= '#Collab' + i, data-toggle='modal') Modifier
+                  div(id=coModal).modal.fade
+                      .modal-dialog.modal-lg
+                        .modal-content
+                          // Modal Header
+                          .modal-header
+                            h2.modal-title EDITION
+                            button.close(type='button' data-dismiss='modal') &times;
+                          // Modal body
+                          .modal-body
+                            form(method='POST', enctype='multipart/form-data', action='updateData')
+                              .form-group
+                                label Name
+                                input.form-control(type='text', placeholder=collab[i].name, name='name')
+                              .form-group
+                                label Age
+                                input.form-control(type='text', placeholder=collab[i].age, name='age')
+                              .form-group
+                                label Technologies
+                                input.form-control(type='text', placeholder=collab[i].techno, name='techno')
+                              .form-group
+                                label Expérience
+                                input.form-control(type='text', placeholder=collab[i].experience, name='experience')
+                              .form-group
+                                label Image
+                                input.d-block(type='file', placeholder=collab[i].image, name='image')
+                              button.btn.btn-primary(type='submit') Submit
+                          // Modal footer
+                          .modal-footer
+                            button.btn.btn-secondary(type='button' data-dismiss='modal') Fermer
