--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,3 +26,10 @@ head
     script(src='javascripts/slick.js', type='text/javascript', charset='utf-8')
     script(src='javascripts/jquery.js', type='text/javascript', charset='utf-8', async='', defer='')
     script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
+    script.
+      $(document).ready(function(){
+      $.get( "/footer", function( data ) {
+      $("#footer").html(data)
+      });
+      });
+      
