--- a/views/footer_collab.pug
+++ b/views/footer_collab.pug
@@ -20,10 +20,11 @@ section#myFooter
       .col-12.col-sm-6.col-lg-3.infos
         // 2eme colonne
         h3 Contact
-        ul
-          li 68 cours de Verdun
-          li alex.lorion@wildcodeschool.com
-          li 06.69.50.26.89
+        - for (var i = 0; i < contact.length; i++)
+          ul
+            li= contact[i].adresse
+            li= contact[i].mail
+            li= contact[i].tel
         h3 Horaires
         ul
           li 09h00-18h00
