--- a/views/concept.html
+++ b/views/concept.html
@@ -37,34 +37,34 @@
 				<div class="col-12 col-md-8">
 					<div class="row">
 						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
+							<img class="img-fluid m-1" src="../public/images/alex.jpg" alt="image du personnel de la team">
 						</div>
 						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
-						</div>
-						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
+							<img class="img-fluid m-1" src="../public/images/aurelien.jpg" alt="image du personnel de la team">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
+							<img class="img-fluid m-1" src="../public/images/elisa.jpg" alt="image du personnel de la team">
 						</div>
 						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
+							<img class="img-fluid m-1" src="../public/images/greg.jpg" alt="image du personnel de la team">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
+							<img class="img-fluid m-1" src="../public/images/josephine.jpg" alt="image du personnel de la team">
 						</div>
 						<div class="col-12 col-md-6">
-							<img class="img-fluid m-1" src="http://givemesport.azureedge.net/images/18/04/03/1ba0972ffd816b35cd192fd59934b9aa/960.jpg" alt="image du personnel de la team">
+							<img class="img-fluid m-1" src="../public/images/" alt="image du personnel de la team">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 col-md-6">
+							<img class="img-fluid m-1" src="../public/images/" alt="image du personnel de la team">
+						</div>
+						<div class="col-12 col-md-6">
+							<img class="img-fluid m-1" src="../public/images/" alt="image du personnel de la team">
 						</div>
 					</div>
 				</div>
