--- a/views/annonce_emploi.pug
+++ b/views/annonce_emploi.pug
@@ -1,12 +1,12 @@
 #offre_emploi.container
   .row
-    - for (let i =0; i < listEmploi.length; i++)
-         - let date_format = new Date(listEmploi[i].date)
+    - for (let i =0; i < emploi.length; i++)
+         - let date_format = new Date(emploi[i].date)
          - let date_final = date_format.toISOString().slice(0,10);
          - let nbModal = 'Annonce' + i
-         - let nom_emploi = listEmploi[i].name_poste
+         - let nom_emploi = emploi[i].nom_poste
          .col-6.col-md-5.offset-1.content_emploi
-          h2= listEmploi[i].name_poste
+          h2= emploi[i].nom_poste
           .info_emploi
             img.logo_entreprise(src='http://via.placeholder.com/150x150')
             .detail_emploi
@@ -16,29 +16,29 @@
                     p= date_final
                 li.liste_emploi
                     i.fa.fa-building.mr-2.fa-2x
-                    p= listEmploi[i].name_recruteur
+                    p= emploi[i].recruteur
                 li.liste_emploi
                     i.fa.fa-briefcase.mr-2.fa-2x
-                    p= listEmploi[i].duree
+                    p= emploi[i].duree
                 li.liste_emploi
                     i.fa.fa-map-marker.mr-2.fa-2x
-                    p= listEmploi[i].ville
+                    p= emploi[i].localisation
           button.btn.btn-primary.btn_modal_emploi(type='button' data-toggle='modal' data-target= '#Annonce' + i) En savoir plus..
           div(id=nbModal).modal.fade
             .modal-dialog.modal-lg
               .modal-content
                 // Modal Header
                 .modal-header
-                  h2.modal-title= listEmploi[i].name_poste
+                  h2.modal-title= emploi[i].nom_poste
                   button.close(type='button' data-dismiss='modal') &times;
                 // Modal body
                 .modal-body
-                  h3= listEmploi[i].name_recruteur
+                  h3= emploi[i].recruteur
                   .container
                     .row
                       .col-12
                         .descri_entreprise
-                          p= listEmploi[i].txt_entreprise
+                          p= emploi[i].entreprise
                   .contexte_annonce
                     .container
                       .row
@@ -47,12 +47,12 @@
                         .col-12.col-lg-6.descri_modal
                           .profil_modal
                             h4  Description du poste
-                            p= listEmploi[i].txt_poste
+                            p= emploi[i].poste
 
                           .competence_modal
                             h4  Competence Requise
                             p
-                                pre.txt_profil_modal= listEmploi[i].txt_competences
+                                pre.txt_profil_modal= emploi[i].competences
 
                 // Modal footer
                 .modal-footer
